In DailyTrain, when correct, shrink quiz item to 0 For max-height and margin Unfortunately, the margins of the surrounding list items still show the gap Maybe later, we can come up with a better way to remove correctly answered quiz questions

--- a/app/components/Train/DailyTrain.module.css
+++ b/app/components/Train/DailyTrain.module.css
@@ -1,115 +1,121 @@
 .buttonContainer {
-    display: flex;
-    gap: 14px;
+  display: flex;
+  gap: 14px;
 }
 
 .quizList > li {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
 .settingsButton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--bg-2);
-    border: none;
-    cursor: pointer;
-    width: 32px;
-    height: 32px;
-    border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--bg-2);
+  border: none;
+  cursor: pointer;
+  width: 32px;
+  height: 32px;
+  border-radius: 4px;
 }
 
 .settingsButton:hover {
-    background: var(--bg-3);
+  background: var(--bg-3);
 }
 
 .settings > div {
-    border-radius: 4px;
-    border: 1px solid var(--border-color);
-    padding: 8px;
-    margin-top: 12px;
+  border-radius: 4px;
+  border: 1px solid var(--border-color);
+  padding: 8px;
+  margin-top: 12px;
 }
 
 .settings > div > h3 {
-    margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 .popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    width: 100dvw;
-    height: 100vh;
-    height: 100dvh;
-    background-color: var(--bg-1);
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    padding: 5rem 0.5rem;
-    overflow: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  width: 100dvw;
+  height: 100vh;
+  height: 100dvh;
+  background-color: var(--bg-1);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  padding: 5rem 0.5rem;
+  overflow: auto;
 }
 
 .popup::-webkit-scrollbar {
-    width: 0;
+  width: 0;
 }
 
 .popup > ol {
-    /* overflow: hidden; */
-    height: fit-content;
+  /* overflow: hidden; */
+  height: fit-content;
 }
 
 .popup li {
-    transition: opacity 3s ease-in-out;
+  transition:
+    opacity 3s ease-in-out,
+    max-height 3s ease-in-out,
+    margin 1s ease-in-out;
 }
 
 .showQuiz {
-    opacity: 1;
+  opacity: 1;
+  max-height: 100vh;
 }
 
-.hideQuiz {
-    opacity: 0;
+.quizList > li.hideQuiz {
+  opacity: 0;
+  max-height: 0;
+  margin: 0;
 }
 
 .popup .closeButton {
-    position: fixed;
-    top: 24px;
-    right: 24px;
-    padding: 8px;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    background: var(--bg-3);
-    color: var(--fg-2);
-    cursor: pointer;
+  position: fixed;
+  top: 24px;
+  right: 24px;
+  padding: 8px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: var(--bg-3);
+  color: var(--fg-2);
+  cursor: pointer;
 }
 
 .closeButton:hover {
-    background: var(--bg-4);
-    color: var(--fg-1);
+  background: var(--bg-4);
+  color: var(--fg-1);
 }
 
 .blurContainer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    width: 100dvw;
-    height: 100vh;
-    height: 100dvh;
-    -webkit-backdrop-filter: blur(20px);
-    backdrop-filter: blur(20px);
-    z-index: 11;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  width: 100dvw;
+  height: 100vh;
+  height: 100dvh;
+  -webkit-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  z-index: 11;
 }
 
 .blurContainer > div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 24px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
